# StarMap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StarMap.sln
AndroidUtils/: AndroidApp.cpp  AndroidApp.h  AndroidUtils.cpp  AndroidUtils.h  AndroidUtils.vcxproj  AndroidUtils.vcxproj.filters  AndroidUtilsPrerequisites.h  AndroidWindow.cpp  AndroidWindow.h  CMakeLists.txt  FontLoader.cpp  FontLoader.h  GestureDetector.cpp  GestureDetector.h  Log.h  ObjLoader.cpp  ObjLoader.h  pch.h
CMake/: Doxygen.cmake
CMake/Templates/: Doxyfile.in
DesktopUtils/: CMakeLists.txt  DesktopUtils.cpp  DesktopUtils.vcxproj  DesktopUtils.vcxproj.filters  DesktopUtilsPrerequisites.h  FontLoader.cpp  Log.h  MsWindow.cpp  MsWindow.h  ObjLoader.cpp  pch.h
Docs/: Sylvain_etoiles_visibles_test.xlsx
FreeType/: FreeType.vcxproj  FreeType.vcxproj.filters
GlLib/: Angle.h  CMakeLists.txt  Converter.h  Converter.inl  Degrees.h  GlArrayUniform.h  GlAttribute.h  GlAttributeBase.cpp  GlAttributeBase.h  GlBuffer.h  GlBufferBase.cpp  GlBufferBase.h  GlDebug.cpp  GlDebug.h  GlFrameBuffer.cpp  GlFrameBuffer.h  GlGeometryBuffers.cpp  GlGeometryBuffers.h  GlLib.natvis  GlLib.vcxproj  GlLib.vcxproj.filters  GlLibPrerequisites.cpp  GlLibPrerequisites.h  GlPipeline.cpp  GlPipeline.h  GlRenderBuffer.cpp  GlRenderBuffer.h  GlSampler.cpp  GlSampler.h  GlShaderProgram.cpp  GlShaderProgram.h  GlTexture.cpp  GlTexture.h  GlUniform.h  GlUniformBase.cpp  GlUniformBase.h  GlUniformBuffer.cpp  GlUniformBuffer.h  GlUniformBuffer.inl  Mat4.h  (+17 more)
RenderLib/: Angle.h  Billboard.cpp  Billboard.h  BillboardBuffer.cpp  BillboardBuffer.h  BorderPanelOverlay.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraState.cpp  CameraState.h  Debug.cpp  Debug.h  ElementsList.h  ExponentialRange.h  FontTexture.cpp  FontTexture.h  Frustum.cpp  Frustum.h  Glyph.h  LogarithmicRange.h  Mesh.cpp  Mesh.h  Movable.cpp  Movable.h  Object.h  OverlayCategory.cpp  OverlayCategory.h  OverlayRenderer.cpp  OverlayRenderer.h  PanelOverlay.h  Picking.cpp  Picking.h  PickingRenderer.cpp  PickingRenderer.h  PlaneEquation.cpp  PlaneEquation.h  PolyLine.cpp  PolyLine.h  Range.h  (+25 more)
RenderLibTestApp/: CMakeLists.txt
RenderLibTestApp/RenderLibDesktopTestApp/: Engine.cpp  Engine.h  RenderLibDesktopTestApp.vcxproj  RenderLibDesktopTestApp.vcxproj.filters
RenderLibTestApp/RenderLibTestApp/: AndroidManifest.xml  CMakeLists.txt  RenderLibTestApp.androidproj
RenderLibTestApp/RenderLibTestApp.NativeActivity/: CMakeLists.txt  Engine.cpp  Engine.h  RenderLibTestApp.NativeActivity.vcxproj  RenderLibTestApp.NativeActivity.vcxproj.filters  main.cpp  pch.h
RenderLibTestApp/RenderLibTestApp/res/values/: strings.xml
StarMapLib/: CMakeLists.txt  CameraState.cpp  CameraState.h  Constellation.cpp  Constellation.h  ConstellationStar.cpp  ConstellationStar.h  CsvReader.cpp  CsvReader.h  ScreenEvents.cpp  ScreenEvents.h  Star.cpp  Star.h  StarHolder.h  StarMap.cpp  StarMap.h  StarMapLib.natvis  StarMapLib.vcxproj  StarMapLib.vcxproj.filters  StarMapLibPrerequisites.cpp  StarMapLibPrerequisites.h  StarMapState.h  XmlReader.cpp  XmlReader.h  pch.h
StarMapLibDesktop/: StarMapLib.natvis  StarMapLibDesktop.vcxproj  StarMapLibDesktop.vcxproj.filters
StarMapLibDesktopTestApp/: CMakeLists.txt  Engine.cpp  Engine.h  Resource.h  StarMapLibDesktopTestApp.cpp  StarMapLibDesktopTestApp.rc  StarMapLibDesktopTestApp.vcxproj  StarMapLibDesktopTestApp.vcxproj.filters  manifest.xml  stdafx.h
StarMapTestApp/: CMakeLists.txt
StarMapTestApp/StarMapLibDesktopTestApp/: CMakeLists.txt  Engine.cpp  Engine.h  Resource.h  StarMapLibDesktopTestApp.vcxproj  stdafx.cpp  stdafx.h
StarMapTestApp/StarMapTestApp/: AndroidManifest.xml  CMakeLists.txt  StarMapTestApp.androidproj
StarMapTestApp/StarMapTestApp.NativeActivity/: CMakeLists.txt  Engine.cpp  Engine.h  StarMapTestApp.NativeActivity.vcxproj  StarMapTestApp.NativeActivity.vcxproj.filters  main.cpp  pch.h
StarMapTestApp/StarMapTestApp/assets/: constellations.xml  stars.csv  stars.xml
StarMapTestApp/StarMapTestApp/res/values/: strings.xml
doc/: DocGlLib.h  DocMainPage.h  DocRenderLib.h  DocStarMapLib.h  RenderLib.Doxyfile  StarMapLib.Doxyfile
